syntax = "proto3";

package secretKey;

service SecretKeys {
    // 秘钥验证授权
    // 全部秘钥
    rpc All(Request) returns (Response) {}
    // 获取秘钥列表
    rpc List(Request) returns (Response) {}
    // 根据 唯一 获取秘钥
    rpc Get(Request) returns (Response) {}
    // 创建秘钥
    rpc Create(Request) returns (Response) {}
    // 更新秘钥
    rpc Update(Request) returns (Response) {}
    // 删除秘钥
    rpc Delete(Request) returns (Response) {}

}

message SecretKey {
    string user_id = 1;             // 用户ID
    string public_key = 2;          // 系统公钥
    string private_key = 3;         // 系统私钥
    string client_public_key = 4;   // 客户端公钥
    string created_at = 5;
    string updated_at = 6;
}

message ListQuery{
    int64 limit=1;      //返回数量
    int64 page=2;       //页面
    string sort=3;      // 排序
    string where = 4;       // 查询条件
}
message Request{
    ListQuery list_query = 1;           // 列表分页请求
    SecretKey secret_key = 2;
}
message Response{
    bool valid = 1;
    int64 total = 2;
    SecretKey secret_key = 3;
    repeated SecretKey secret_keys = 4;
}